# DirMeta

./: Cargo.toml  README.md  deny.toml
.github/workflows/: docsrs.yml  rust.yml
examples/: async_dir_contents.rs  dir_contents.rs  watch_path.rs
src/: fs.rs  lib.rs  main.rs  utils.rs  watcher.rs
