[package]
name = "dir-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = { version = "0.22.0", features = [
    "reader",
    "reader-asf",
    "reader-cfb",
    "reader-ebml",
    "reader-exe",
    "reader-mp4",
    "reader-pdf",
    "reader-rm",
    "reader-txt",
    "reader-xml",
    "reader-zip",

] }
async-fs = "2.1.0"
async-recursion = "1.0.5"
byte_prefix = "1.0.0"
futures-lite = "2.0.1"
smol = "1.3.0"
tai64 = "4.0.0"
chrono = { version = "0.4.31" }
humantime = "2.1.0"
