[package]
name = "dir-meta"
version = "0.2.0"
license = "Apache-2.0"
edition = "2021"
authors = ["448 OG <superuser@448.africa>"]
description = "Read a directory and get back all files and errors from the read operation"
categories = ["filesystem"]
keywords = ["recursion", "directory", "files", "async"]
homepage = "https://github.com/448-engineering/DirMeta.git"
repository = "https://github.com/448-engineering/DirMeta.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = { version = "0.22.0", features = [
    "reader",
    "reader-asf",
    "reader-cfb",
    "reader-ebml",
    "reader-exe",
    "reader-mp4",
    "reader-pdf",
    "reader-rm",
    "reader-txt",
    "reader-xml",
    "reader-zip",

] }
async-fs = "2.1.0"
async-recursion = "1.0.5"
byte_prefix = "1.0.0"
futures-lite = "2.0.1"
tai64 = "4.0.0"
chrono = { version = "0.4.31", optional = true }
humantime = { version = "2.1.0", optional = true }

[features]
default = ["time"]
time = ["dep:chrono", "dep:humantime"]

[dev-dependencies]
smol = "1.3.0"
